update index.html with Ivy League universities information; remove outdated HTML file and add OpenAI image

--- a/class002/index.html
+++ b/class002/index.html
@@ -3,41 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 17/02  </title>
+    <title>Ivy League Universities</title>
 </head>
 <body>
-    <h1>Relatório da minha experiência no Hackathon PennApps na University of Pennsylvania</h1>
-    <h3>Um Hackathon onde desenvolvemos uma interface web de aprendizado paralelo a aula para estudantes estudarem seus conteúdos de sala, em casa. O chamamos de <b>SpeeckScribe</b>.</h3>
-    <a href="https://luisabrantes.github.io/luis.hsa">Caso queira me conhecer mais, esse é o link do meu portifólio!</a>
-    <br/>
-    <br/>
+    <h1>Ivy League Universities</h1>
 
-    <a href="https://www.upenn.edu/" target="_blank">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp5rVGDTf37g78Wdlz8zuw9WpxrKaK0opjkg&s" alt="Clique para ir para a University of Pennsylvania"/>
-    </a>
-    <p>Atenção, essa é uma imagem clicável, o referenciando para o site da univerisidade de tal logo (UPenn, membro da Ivy League)</p>
+    <h2>Harvard University</h2>
+    <p>Founded in 1636, Harvard is the oldest institution of higher learning in the United States. It is renowned for its law, business, and medical schools.</p>
 
-    <br/>
-    <br/>
+    <h2>Yale University</h2>
+    <p>Established in 1701, Yale is known for its strong arts and drama programs. Its library is one of the largest in the world.</p>
 
-    <img src="https://images.crunchbase.com/image/upload/c_pad,h_256,w_256,f_auto,q_auto:eco,dpr_1/v1410954794/lolmefoefps1dyz6gtqi.png" alt="Imagem d alogo do PennApps"/>
+    <h2>Princeton University</h2>
+    <p>Founded in 1746, Princeton is famous for its focus on undergraduate education and its strong programs in mathematics and physics.</p>
 
-    
+    <h2>Columbia University</h2>
+    <p>Located in New York City, Columbia is known for its journalism and international affairs programs. It has strong ties to the city.</p>
 
-    <h2>Lista dos integrantes da minha equipe:</h2>
-    <ul>
-        <li>Luis Abrantes</li>
-        <li>Rayan Thieu</li>
-        <li>Rishi Nalen</li>
-        <li>Aman Nalen</li>
-    </ul>
+    <h2>University of Pennsylvania</h2>
+    <p>Founded by Benjamin Franklin, Penn is known for its Wharton School of Business and its strong programs in medicine and engineering.</p>
 
-    <h2>Lista dos países das nacionalidades mais representadas/presentes (quantidade) entre os integrantes Hackathon:</h2>
-    <ol>
-        <li>Estados Unidos da América</li>
-        <li>China</li>
-        <li>Índia</li>
-        <li>México </li>
-    </ol>
+    <h2>Dartmouth College</h2>
+    <p>Located in Hanover, New Hampshire, Dartmouth is known for its focus on undergraduate education and its beautiful rural setting.</p>
+
+    <h2>Brown University</h2>
+    <p>Established in 1764, Brown is known for its open curriculum, which allows students to design their own course of study.</p>
+
+    <h2>Cornell University</h2>
+    <p>Founded in 1865, Cornell is a land-grant university known for its strong programs in engineering, agriculture, and hotel administration.</p>
 </body>
 </html>
