--- a/class002/index.html
+++ b/class002/index.html
@@ -1,35 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ivy League Universities</title>
-</head>
-<body>
-    <h1>Ivy League Universities</h1>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Ivy League Universities</title>
+    </head>
+    <body>
+        <h1>Welcome to the Main Page</h1>
 
-    <h2>Harvard University</h2>
-    <p>Founded in 1636, Harvard is the oldest institution of higher learning in the United States. It is renowned for its law, business, and medical schools.</p>
+        <nav>
+            <a href="#Harvard">Go to Harvard</a> |
+            <a href="#Yale">Go to Yale</a> |
+            <a href="#Princeton">Go to Princeton</a> |
+            <a href="#Columbia">Go to Columbia</a> |
+            <a href="#UPenn">Go to UPenn</a> |
+            <a href="#Dartmouth">Go to Dartmouth</a> |
+            <a href="#Brown">Go to Brown</a> |
+            <a href="#Cornell">Go to Cornell</a>
+        </nav>
 
-    <h2>Yale University</h2>
-    <p>Established in 1701, Yale is known for its strong arts and drama programs. Its library is one of the largest in the world.</p>
+        <h2 id="Harvard">Harvard University</h2>
+        <p>
+            Founded in 1636, Harvard is the oldest institution of higher
+            learning in the United States. It is renowned for its law, business,
+            and medical schools.
+        </p>
 
-    <h2>Princeton University</h2>
-    <p>Founded in 1746, Princeton is famous for its focus on undergraduate education and its strong programs in mathematics and physics.</p>
+        <h2 id="Yale">Yale University</h2>
+        <p>
+            Established in 1701, Yale is known for its strong arts and drama
+            programs. Its library is one of the largest in the world.
+        </p>
 
-    <h2>Columbia University</h2>
-    <p>Located in New York City, Columbia is known for its journalism and international affairs programs. It has strong ties to the city.</p>
+        <h2 id="Princeton">Princeton University</h2>
+        <p>
+            Founded in 1746, Princeton is famous for its focus on undergraduate
+            education and its strong programs in mathematics and physics.
+        </p>
 
-    <h2>University of Pennsylvania</h2>
-    <p>Founded by Benjamin Franklin, Penn is known for its Wharton School of Business and its strong programs in medicine and engineering.</p>
+        <h2 id="Columbia">Columbia University</h2>
+        <p>
+            Located in New York City, Columbia is known for its journalism and
+            international affairs programs. It has strong ties to the city.
+        </p>
 
-    <h2>Dartmouth College</h2>
-    <p>Located in Hanover, New Hampshire, Dartmouth is known for its focus on undergraduate education and its beautiful rural setting.</p>
+        <h2 id="UPenn">University of Pennsylvania</h2>
+        <p>
+            Founded by Benjamin Franklin, Penn is known for its Wharton School
+            of Business and its strong programs in medicine and engineering.
+        </p>
 
-    <h2>Brown University</h2>
-    <p>Established in 1764, Brown is known for its open curriculum, which allows students to design their own course of study.</p>
+        <h2 id="Dartmouth">Dartmouth College</h2>
+        <p>
+            Located in Hanover, New Hampshire, Dartmouth is known for its focus
+            on undergraduate education and its beautiful rural setting.
+        </p>
 
-    <h2>Cornell University</h2>
-    <p>Founded in 1865, Cornell is a land-grant university known for its strong programs in engineering, agriculture, and hotel administration.</p>
-</body>
+        <h2 id="Brown">Brown University</h2>
+        <p>
+            Established in 1764, Brown is known for its open curriculum, which
+            allows students to design their own course of study.
+        </p>
+
+        <h2 id="Cornell">Cornell University</h2>
+        <p>
+            Founded in 1865, Cornell is a land-grant university known for its
+            strong programs in engineering, agriculture, and hotel
+            administration.
+        </p>
+
+        <dl>
+            <dt><a href="universitysHTML/harvard.html">Harvard University</a></dt>
+            <dd>Learn more about Harvard University</dd>
+
+            <dt><a href="yale.html">Yale University</a></dt>
+            <dd>Learn more about Yale University</dd>
+
+            <dt><a href="princeton.html">Princeton University</a></dt>
+            <dd>Learn more about Princeton University</dd>
+
+            <dt><a href="columbia.html">Columbia University</a></dt>
+            <dd>Learn more about Columbia University</dd>
+
+            <dt><a href="upenn.html">University of Pennsylvania</a></dt>
+            <dd>Learn more about University of Pennsylvania</dd>
+
+            <dt><a href="dartmouth.html">Dartmouth College</a></dt>
+            <dd>Learn more about Dartmouth College</dd>
+
+            <dt><a href="brown.html">Brown University</a></dt>
+            <dd>Learn more about Brown University</dd>
+
+            <dt><a href="cornell.html">Cornell University</a></dt>
+            <dd>Learn more about Cornell University</dd>
+        </dl>
+    </body>
 </html>
