update index.html to correct links for Ivy League universities; add new HTML files for university details

--- a/class002/index.html
+++ b/class002/index.html
@@ -73,25 +73,25 @@
             <dt><a href="universitysHTML/harvard.html">Harvard University</a></dt>
             <dd>Learn more about Harvard University</dd>
 
-            <dt><a href="yale.html">Yale University</a></dt>
+            <dt><a href="universitysHTML/yale.html">Yale University</a></dt>
             <dd>Learn more about Yale University</dd>
 
-            <dt><a href="princeton.html">Princeton University</a></dt>
+            <dt><a href="universitysHTML/princeton.html">Princeton University</a></dt>
             <dd>Learn more about Princeton University</dd>
 
-            <dt><a href="columbia.html">Columbia University</a></dt>
+            <dt><a href="universitysHTML/columbia.html">Columbia University</a></dt>
             <dd>Learn more about Columbia University</dd>
 
-            <dt><a href="upenn.html">University of Pennsylvania</a></dt>
+            <dt><a href="universitysHTML/upenn.html">University of Pennsylvania</a></dt>
             <dd>Learn more about University of Pennsylvania</dd>
 
-            <dt><a href="dartmouth.html">Dartmouth College</a></dt>
+            <dt><a href="universitysHTML/dartmouth.html">Dartmouth College</a></dt>
             <dd>Learn more about Dartmouth College</dd>
 
-            <dt><a href="brown.html">Brown University</a></dt>
+            <dt><a href="universitysHTML/brown.html">Brown University</a></dt>
             <dd>Learn more about Brown University</dd>
 
-            <dt><a href="cornell.html">Cornell University</a></dt>
+            <dt><a href="universitysHTML/cornell.html">Cornell University</a></dt>
             <dd>Learn more about Cornell University</dd>
         </dl>
     </body>
