add CSS styles and HTML files for Ivy League universities

--- a/class002/index.html
+++ b/class002/index.html
@@ -4,19 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ivy League Universities</title>
+        <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
         <h1>Welcome to the Main Page</h1>
 
         <nav>
-            <a href="#Harvard">Go to Harvard</a> |
-            <a href="#Yale">Go to Yale</a> |
-            <a href="#Princeton">Go to Princeton</a> |
-            <a href="#Columbia">Go to Columbia</a> |
-            <a href="#UPenn">Go to UPenn</a> |
-            <a href="#Dartmouth">Go to Dartmouth</a> |
-            <a href="#Brown">Go to Brown</a> |
-            <a href="#Cornell">Go to Cornell</a>
+            <a href="universitysHTML/harvard.html">Go to Harvard</a> |
+            <a href="universitysHTML/yale.html">Go to Yale</a> |
+            <a href="universitysHTML/princeton.html">Go to Princeton</a> |
+            <a href="universitysHTML/columbia.html">Go to Columbia</a> |
+            <a href="universitysHTML/upenn.html">Go to UPenn</a> |
+            <a href="universitysHTML/dartmouth.html">Go to Dartmouth</a> |
+            <a href="universitysHTML/brown.html">Go to Brown</a> |
+            <a href="universitysHTML/cornell.html">Go to Cornell</a>
         </nav>
 
         <h2 id="Harvard">Harvard University</h2>
@@ -24,42 +25,55 @@
             Founded in 1636, Harvard is the oldest institution of higher
             learning in the United States. It is renowned for its law, business,
             and medical schools.
+            <a href="universitysHTML/harvard.html">Learn more about Harvard.</a>
         </p>
 
         <h2 id="Yale">Yale University</h2>
         <p>
             Established in 1701, Yale is known for its strong arts and drama
             programs. Its library is one of the largest in the world.
+            <a href="universitysHTML/yale.html">Learn more about Yale.</a>
         </p>
 
         <h2 id="Princeton">Princeton University</h2>
         <p>
             Founded in 1746, Princeton is famous for its focus on undergraduate
             education and its strong programs in mathematics and physics.
+            <a href="universitysHTML/princeton.html"
+                >Learn more about Princeton.</a
+            >
         </p>
 
         <h2 id="Columbia">Columbia University</h2>
         <p>
             Located in New York City, Columbia is known for its journalism and
             international affairs programs. It has strong ties to the city.
+            <a href="universitysHTML/columbia.html"
+                >Learn more about Columbia.</a
+            >
         </p>
 
         <h2 id="UPenn">University of Pennsylvania</h2>
         <p>
             Founded by Benjamin Franklin, Penn is known for its Wharton School
             of Business and its strong programs in medicine and engineering.
+            <a href="universitysHTML/upenn.html">Learn more about UPenn.</a>
         </p>
 
         <h2 id="Dartmouth">Dartmouth College</h2>
         <p>
             Located in Hanover, New Hampshire, Dartmouth is known for its focus
             on undergraduate education and its beautiful rural setting.
+            <a href="universitysHTML/dartmouth.html"
+                >Learn more about Dartmouth.</a
+            >
         </p>
 
         <h2 id="Brown">Brown University</h2>
         <p>
             Established in 1764, Brown is known for its open curriculum, which
             allows students to design their own course of study.
+            <a href="universitysHTML/brown.html">Learn more about Brown.</a>
         </p>
 
         <h2 id="Cornell">Cornell University</h2>
@@ -67,31 +81,48 @@
             Founded in 1865, Cornell is a land-grant university known for its
             strong programs in engineering, agriculture, and hotel
             administration.
+            <a href="universitysHTML/cornell.html">Learn more about Cornell.</a>
         </p>
 
         <dl>
-            <dt><a href="universitysHTML/harvard.html">Harvard University</a></dt>
+            <dt>
+                <a href="universitysHTML/harvard.html">Harvard University</a>
+            </dt>
             <dd>Learn more about Harvard University</dd>
 
             <dt><a href="universitysHTML/yale.html">Yale University</a></dt>
             <dd>Learn more about Yale University</dd>
 
-            <dt><a href="universitysHTML/princeton.html">Princeton University</a></dt>
+            <dt>
+                <a href="universitysHTML/princeton.html"
+                    >Princeton University</a
+                >
+            </dt>
             <dd>Learn more about Princeton University</dd>
 
-            <dt><a href="universitysHTML/columbia.html">Columbia University</a></dt>
+            <dt>
+                <a href="universitysHTML/columbia.html">Columbia University</a>
+            </dt>
             <dd>Learn more about Columbia University</dd>
 
-            <dt><a href="universitysHTML/upenn.html">University of Pennsylvania</a></dt>
+            <dt>
+                <a href="universitysHTML/upenn.html"
+                    >University of Pennsylvania</a
+                >
+            </dt>
             <dd>Learn more about University of Pennsylvania</dd>
 
-            <dt><a href="universitysHTML/dartmouth.html">Dartmouth College</a></dt>
+            <dt>
+                <a href="universitysHTML/dartmouth.html">Dartmouth College</a>
+            </dt>
             <dd>Learn more about Dartmouth College</dd>
 
             <dt><a href="universitysHTML/brown.html">Brown University</a></dt>
             <dd>Learn more about Brown University</dd>
 
-            <dt><a href="universitysHTML/cornell.html">Cornell University</a></dt>
+            <dt>
+                <a href="universitysHTML/cornell.html">Cornell University</a>
+            </dt>
             <dd>Learn more about Cornell University</dd>
         </dl>
     </body>
