update index.html and style.css to improve navigation and enhance dark theme styling for university sections

--- a/class002/index.html
+++ b/class002/index.html
@@ -10,15 +10,17 @@
         <h1>Welcome to the Main Page</h1>
 
         <nav>
-            <a href="universitysHTML/harvard.html">Go to Harvard</a> |
-            <a href="universitysHTML/yale.html">Go to Yale</a> |
-            <a href="universitysHTML/princeton.html">Go to Princeton</a> |
-            <a href="universitysHTML/columbia.html">Go to Columbia</a> |
-            <a href="universitysHTML/upenn.html">Go to UPenn</a> |
-            <a href="universitysHTML/dartmouth.html">Go to Dartmouth</a> |
-            <a href="universitysHTML/brown.html">Go to Brown</a> |
-            <a href="universitysHTML/cornell.html">Go to Cornell</a>
+            <a href="#Harvard">Go to Harvard</a> |
+            <a href="#Yale">Go to Yale</a> |
+            <a href="#Princeton">Go to Princeton</a> |
+            <a href="#Columbia">Go to Columbia</a> |
+            <a href="#UPenn">Go to UPenn</a> |
+            <a href="#Dartmouth">Go to Dartmouth</a> |
+            <a href="#Brown">Go to Brown</a> |
+            <a href="#Cornell">Go to Cornell</a>
         </nav>
+
+        <br>
 
         <h2 id="Harvard">Harvard University</h2>
         <p>
@@ -28,12 +30,16 @@
             <a href="universitysHTML/harvard.html">Learn more about Harvard.</a>
         </p>
 
+        <br>
+
         <h2 id="Yale">Yale University</h2>
         <p>
             Established in 1701, Yale is known for its strong arts and drama
             programs. Its library is one of the largest in the world.
             <a href="universitysHTML/yale.html">Learn more about Yale.</a>
         </p>
+
+        <br>
 
         <h2 id="Princeton">Princeton University</h2>
         <p>
@@ -44,6 +50,8 @@
             >
         </p>
 
+        <br>
+
         <h2 id="Columbia">Columbia University</h2>
         <p>
             Located in New York City, Columbia is known for its journalism and
@@ -53,12 +61,16 @@
             >
         </p>
 
+        <br>
+
         <h2 id="UPenn">University of Pennsylvania</h2>
         <p>
             Founded by Benjamin Franklin, Penn is known for its Wharton School
             of Business and its strong programs in medicine and engineering.
             <a href="universitysHTML/upenn.html">Learn more about UPenn.</a>
         </p>
+
+        <br>
 
         <h2 id="Dartmouth">Dartmouth College</h2>
         <p>
@@ -69,12 +81,16 @@
             >
         </p>
 
+        <br>
+
         <h2 id="Brown">Brown University</h2>
         <p>
             Established in 1764, Brown is known for its open curriculum, which
             allows students to design their own course of study.
             <a href="universitysHTML/brown.html">Learn more about Brown.</a>
         </p>
+
+        <br>
 
         <h2 id="Cornell">Cornell University</h2>
         <p>
@@ -83,6 +99,8 @@
             administration.
             <a href="universitysHTML/cornell.html">Learn more about Cornell.</a>
         </p>
+
+        <br>
 
         <dl>
             <dt>
