add favicon, meta tags, and new content sections to enhance university page

--- a/class002/index.html
+++ b/class002/index.html
@@ -5,6 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ivy League Universities</title>
         <link rel="stylesheet" href="style/style.css" />
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+        <meta
+            name="description"
+            content="Explore the prestigious Ivy League universities, their history, and unique characteristics."
+        />
+        <meta
+            name="keywords"
+            content="Ivy League, universities, education, Harvard, Yale, Princeton, Columbia, UPenn, Dartmouth, Brown, Cornell"
+        />
+        <meta name="author" content="Luis Abrantes" />
     </head>
     <body>
         <h1>Welcome to the Main Page</h1>
@@ -17,10 +27,11 @@
             <a href="#UPenn">Go to UPenn</a> |
             <a href="#Dartmouth">Go to Dartmouth</a> |
             <a href="#Brown">Go to Brown</a> |
-            <a href="#Cornell">Go to Cornell</a>
+            <a href="#Cornell">Go to Cornell</a>|
+            <a href="#DefinitionList">Go to Definition List</a>
         </nav>
 
-        <br>
+        <br />
 
         <h2 id="Harvard">Harvard University</h2>
         <p>
@@ -30,7 +41,7 @@
             <a href="universitysHTML/harvard.html">Learn more about Harvard.</a>
         </p>
 
-        <br>
+        <br />
 
         <h2 id="Yale">Yale University</h2>
         <p>
@@ -39,7 +50,7 @@
             <a href="universitysHTML/yale.html">Learn more about Yale.</a>
         </p>
 
-        <br>
+        <br />
 
         <h2 id="Princeton">Princeton University</h2>
         <p>
@@ -50,7 +61,7 @@
             >
         </p>
 
-        <br>
+        <br />
 
         <h2 id="Columbia">Columbia University</h2>
         <p>
@@ -61,7 +72,7 @@
             >
         </p>
 
-        <br>
+        <br />
 
         <h2 id="UPenn">University of Pennsylvania</h2>
         <p>
@@ -70,7 +81,7 @@
             <a href="universitysHTML/upenn.html">Learn more about UPenn.</a>
         </p>
 
-        <br>
+        <br />
 
         <h2 id="Dartmouth">Dartmouth College</h2>
         <p>
@@ -81,7 +92,7 @@
             >
         </p>
 
-        <br>
+        <br />
 
         <h2 id="Brown">Brown University</h2>
         <p>
@@ -90,7 +101,7 @@
             <a href="universitysHTML/brown.html">Learn more about Brown.</a>
         </p>
 
-        <br>
+        <br />
 
         <h2 id="Cornell">Cornell University</h2>
         <p>
@@ -100,7 +111,9 @@
             <a href="universitysHTML/cornell.html">Learn more about Cornell.</a>
         </p>
 
-        <br>
+        <br />
+
+        <h2 id="DefinitionList">Definition List</h2>
 
         <dl>
             <dt>
@@ -143,5 +156,28 @@
             </dt>
             <dd>Learn more about Cornell University</dd>
         </dl>
+
+        <article>
+            <header>
+                <h2>Explorando as Universidades da Ivy League</h2>
+                <p>Por Luis Abrantes, 2025</p>
+            </header>
+            <p>
+                As universidades da Ivy League são conhecidas mundialmente por
+                sua excelência acadêmica, tradição e prestígio. Neste post,
+                exploraremos as características únicas de cada uma dessas
+                instituições renomadas.
+            </p>
+        </article>
+
+        <footer>
+            <p>
+                <a
+                    href="https://luisabrantes.github.io/luis.hsa/"
+                    target="_blank"
+                    >&copy; 2025 Luis Abrantes. All rights reserved.</a
+                >
+            </p>
+        </footer>
     </body>
 </html>
