add media section with video and audio elements to enhance university page

--- a/class002/index.html
+++ b/class002/index.html
@@ -157,6 +157,28 @@
             <dd>Learn more about Cornell University</dd>
         </dl>
 
+        <h2 id="Media">Media</h2>
+
+        <!-- Adicionando novos arquivos de mídia -->
+        <video controls width="600">
+            <source src="img/ifsp_jcr.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+        </video>
+
+        <audio controls>
+            <source src="img/leastfav-days.mp3" type="audio/mpeg" />
+            Your browser does not support the audio element.
+        </audio>
+
+        <!--iframe para o vídeo do YouTube -->
+        <iframe
+            width="600"
+            height="338"
+            src="https://www.youtube.com/embed/dXeY6uY-gDc?si=X7HlVTRlYcBtt4mF"
+            frameborder="0"
+            allowfullscreen
+        ></iframe>
+
         <article>
             <header>
                 <h2>Explorando as Universidades da Ivy League</h2>
