--- a/class002/index.html
+++ b/class002/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ivy League Universities</title>
         <link rel="stylesheet" href="style/style.css" />
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="" type="image/x-icon" />
         <meta
             name="description"
             content="Explore the prestigious Ivy League universities, their history, and unique characteristics."
@@ -20,7 +20,7 @@
         <h1>Welcome to the Main Page</h1>
 
         <nav>
-            <a href="#Harvard">Go to Harvard</a> |
+            <a href="#Harvard">Go to Harvard </a> |
             <a href="#Yale">Go to Yale</a> |
             <a href="#Princeton">Go to Princeton</a> |
             <a href="#Columbia">Go to Columbia</a> |
