add images and enhance content for Ivy League university pages

--- a/class002/universitysHTML/cornell.html
+++ b/class002/universitysHTML/cornell.html
@@ -18,6 +18,16 @@
             Cornell is known for its diverse student body and its commitment to
             public engagement.
         </p>
+        <img
+            src="https://example.com/cornell1.jpg"
+            alt="Cornell University Campus"
+            class="small-image"
+        />
+        <img
+            src="https://example.com/cornell2.jpg"
+            alt="Cornell University Building"
+            class="small-image"
+        />
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
