--- a/class002/universitysHTML/dartmouth.html
+++ b/class002/universitysHTML/dartmouth.html
@@ -17,6 +17,16 @@
             Dartmouth is one of the smallest Ivy League universities, offering a
             close-knit community and a strong emphasis on liberal arts.
         </p>
+        <img
+            src="https://example.com/dartmouth1.jpg"
+            alt="Dartmouth College Campus"
+            class="small-image"
+        />
+        <img
+            src="https://example.com/dartmouth2.jpg"
+            alt="Dartmouth College Building"
+            class="small-image"
+        />
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
