--- a/class002/universitysHTML/upenn.html
+++ b/class002/universitysHTML/upenn.html
@@ -18,6 +18,17 @@
             Penn is one of the oldest universities in the United States and is
             consistently ranked among the top universities in the world.
         </p>
+        <img
+            src="../img/meOne-C43Mc62i.png"
+            alt="University of Pennsylvania Campus"
+            class="small-image"
+        />
+        <img
+            src="https://facilities.upenn.edu/sites/default/files/styles/carousel_4_3/public/images/7%20College%20Hall_0.jpg?itok=uL5Ghr0z"
+            alt="University of Pennsylvania Building"
+            class="small-image"
+        />
+        <br>
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
