--- a/class002/universitysHTML/yale.html
+++ b/class002/universitysHTML/yale.html
@@ -18,6 +18,18 @@
             prestigious law and management schools. Its library is one of the
             largest in the world.
         </p>
+        <img
+            src="https://admissions.yale.edu/sites/default/files/styles/flexslider_full/public/2010_05_10_19_03_37_central_campus_1.jpg?itok=1hVNjje6"
+            alt="Yale University Campus"
+            class="small-image"
+        />
+
+        <img
+            src="https://library.yale.edu/sites/default/files/harvey_cushing-john_hay_whitney_medical_library.jpg"
+            alt="Yale University Library"
+            class="small-image"
+        />
+        <br />
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
