--- a/class002/index.html
+++ b/class002/index.html
@@ -74,7 +74,7 @@
 
         <br />
 
-        <h2 id="UPenn">University of Pennsylvania</h2>
+        <h2 id="UPenn">University of Pennsylvania ⭐️</h2>
         <p>
             Founded by Benjamin Franklin, Penn is known for its Wharton School
             of Business and its strong programs in medicine and engineering.
