--- a/class002/universitysHTML/brown.html
+++ b/class002/universitysHTML/brown.html
@@ -18,6 +18,16 @@
             Brown is the seventh-oldest college in the United States and is
             known for its strong emphasis on undergraduate education.
         </p>
+        <img
+            src="https://example.com/brown1.jpg"
+            alt="Brown University Campus"
+            class="small-image"
+        />
+        <img
+            src="https://example.com/brown2.jpg"
+            alt="Brown University Building"
+            class="small-image"
+        />
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
