--- a/class002/universitysHTML/columbia.html
+++ b/class002/universitysHTML/columbia.html
@@ -17,6 +17,17 @@
             Columbia is one of the oldest universities in the United States and
             is known for its core curriculum and its global reach.
         </p>
+        <img
+            src="https://www.columbia.edu/content/sites/default/files/styles/cu_crop/public/content/about/Morningside%20Campus.JPG?itok=Dnaz0Ulk"
+            alt="Columbia University Campus"
+            class="small-image"
+        />
+        <img
+            src="https://i.insider.com/51cdd17f6bb3f73b19000004?width=800&format=jpeg&auto=webp"
+            alt="Columbia University Building"
+            class="small-image"
+        />
+        <br>
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
