--- a/class002/universitysHTML/harvard.html
+++ b/class002/universitysHTML/harvard.html
@@ -17,6 +17,17 @@
             Harvard is renowned for its law, business, and medical schools, and
             is consistently ranked among the top universities in the world.
         </p>
+        <img
+            src="https://lh3.googleusercontent.com/places/ANXAkqEJ8AOsYB9kox41U3FHEmsLo1LeBnElHf0bORl-WKICXCv_rm3JDer1uEIBpavc36_zilD7PF-WsX66hgZmSqU2qcVoVLFVg4g=s1600-w420-h280"
+            alt="Harvard University Campus"
+            class="small-image"
+        />
+        <img
+            src="https://media.istockphoto.com/id/539018591/photo/harvard-moors-hall.jpg?s=612x612&w=0&k=20&c=gnKcGqWT2HGi34uPTOMWyr-0oc-Tcpq9-Cg5mHF82f0="
+            alt="Harvard University Building"
+            class="small-image"
+        />
+        <br>
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
