update images for Brown, Cornell, and Dartmouth university pages to enhance visual content

--- a/class002/universitysHTML/brown.html
+++ b/class002/universitysHTML/brown.html
@@ -19,15 +19,16 @@
             known for its strong emphasis on undergraduate education.
         </p>
         <img
-            src="https://example.com/brown1.jpg"
+            src="https://globaladmissionsv2.s3.amazonaws.com/media/school_pictures/brown-university-campus.jpg"
             alt="Brown University Campus"
             class="small-image"
         />
         <img
-            src="https://example.com/brown2.jpg"
+            src="https://www.brown.edu/Departments/Joukowsky_Institute/about/rihalltransform/files/10246230.JPG"
             alt="Brown University Building"
             class="small-image"
         />
+        <br>
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
