--- a/class002/universitysHTML/cornell.html
+++ b/class002/universitysHTML/cornell.html
@@ -19,15 +19,16 @@
             public engagement.
         </p>
         <img
-            src="https://example.com/cornell1.jpg"
+            src="https://www.engineering.cornell.edu/sites/default/files/styles/width_700/public/departments/admissions/Images/campus_1400x480.jpg?itok=sjCy5Nk9"
             alt="Cornell University Campus"
             class="small-image"
         />
         <img
-            src="https://example.com/cornell2.jpg"
+            src="https://cdn.britannica.com/08/235008-050-C82C6C44/Cornell-University-Uris-Library-Ithaca-New-York.jpg"
             alt="Cornell University Building"
             class="small-image"
         />
+        <br>
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
