--- a/class002/universitysHTML/dartmouth.html
+++ b/class002/universitysHTML/dartmouth.html
@@ -18,15 +18,16 @@
             close-knit community and a strong emphasis on liberal arts.
         </p>
         <img
-            src="https://example.com/dartmouth1.jpg"
+            src="https://home.dartmouth.edu/sites/home/files/styles/max_width_720px/public/news/aerial-campus-fall15-597.jpg?itok=rXwJs2tv"
             alt="Dartmouth College Campus"
             class="small-image"
         />
         <img
-            src="https://example.com/dartmouth2.jpg"
+            src="https://admissions.dartmouth.edu/sites/admissions.prod/files/styles/dart_teaser/public/admissions/content/season/hero_1920x1135_bakersummernight.jpg?itok=ZIcODZAZ"
             alt="Dartmouth College Building"
             class="small-image"
         />
+        <br>
         <a href="../index.html">Back to Main Page</a>
     </body>
 </html>
