update page title and improve content for Ivy League studies section

--- a/class002/index.html
+++ b/class002/index.html
@@ -17,7 +17,7 @@
         <meta name="author" content="Luis Abrantes" />
     </head>
     <body>
-        <h1>Welcome to the Main Page</h1>
+        <h1>Welcome to the Main Page of Ivy League Studies</h1>
 
         <nav>
             <a href="#Harvard">Go to Harvard </a> |
@@ -159,7 +159,7 @@
 
         <h2 id="Media">Media</h2>
 
-        <!-- Adicionando novos arquivos de mídia -->
+        <!-- Adding new media files -->
         <video controls width="600">
             <source src="img/ifsp_jcr.mp4" type="video/mp4" />
             Your browser does not support the video tag.
@@ -170,7 +170,7 @@
             Your browser does not support the audio element.
         </audio>
 
-        <!--iframe para o vídeo do YouTube -->
+        <!-- iframe for YouTube video -->
         <iframe
             width="600"
             height="338"
@@ -181,14 +181,14 @@
 
         <article>
             <header>
-                <h2>Explorando as Universidades da Ivy League</h2>
-                <p>Por Luis Abrantes, 2025</p>
+                <h2>Exploring Ivy League Universities</h2>
+                <p>By Luis Abrantes, 2025</p>
             </header>
             <p>
-                As universidades da Ivy League são conhecidas mundialmente por
-                sua excelência acadêmica, tradição e prestígio. Neste post,
-                exploraremos as características únicas de cada uma dessas
-                instituições renomadas.
+                The Ivy League universities are globally known for their
+                academic excellence, tradition, and prestige. In this post, we
+                will explore the unique characteristics of each of these
+                renowned institutions.
             </p>
         </article>
 
