Add new CSS styles for Apple-themed layout and update personal information in index.html

--- a/class003/index.html
+++ b/class003/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Personal Profile</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/apple.css" />
     </head>
     <body>
         <header>
@@ -21,15 +21,15 @@
             <section id="personal-info">
                 <h2>Personal Information</h2>
                 <p>Name: Luis Abrantes</p>
-                <p>Date of Birth: January 1, 2000</p>
-                <p>Email: luis.abrantes@example.com</p>
+                <p>Date of Birth: January 23, 2007</p>
+                <p>Email: luis.hsa@gmail.com</p>
             </section>
 
             <section id="address">
                 <h2>Address</h2>
-                <p>123 Main Street</p>
-                <p>City, State, ZIP</p>
-                <p>Country</p>
+                <p>3451 Walnut Street</p>
+                <p>Philadelphia, PA 19104</p>
+                <p>USA</p>
             </section>
 
             <section id="phone">
