Add background image to main content and update programming languages in skills section

--- a/class003/index.html
+++ b/class003/index.html
@@ -44,7 +44,7 @@
 
             <section id="skills">
                 <h2>Personal Skills</h2>
-                <p>Programming Languages: JavaScript, Python, Java</p>
+                <p>Programming Languages: JavaScript, Python, C#</p>
                 <p>Web Technologies: HTML, CSS, React</p>
                 <p>Soft Skills: Communication, Teamwork, Problem-solving</p>
             </section>
