Add AirPods image and update background color in class005; enhance description in ClassesList

--- a/public/classes/class005/index.html
+++ b/public/classes/class005/index.html
@@ -201,6 +201,8 @@
             <p>
                 <a href="https://www.apple.com/airpods/">Apple AirPods</a>
             </p>
+
+            <img src="https://png.pngtree.com/png-vector/20231104/ourmid/pngtree-apple-airpods-pro-png-image_10477533.png" alt="AirPod Pro Photo">
         </div>
 
         <footer></footer>
