Add HTML structure and JavaScript functionality for class015; implement CEP retrieval and display features

--- a/public/classes/class015/part1 - model/index.html
+++ b/public/classes/class015/part1 - model/index.html
@@ -8,6 +8,6 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    class content: api concept, cdn concept, axios, 
+    class content: api concept, cdn concept, axios, hoppscotch.io , postman
 </body>
 </html>
